parser/cool.output
Terminals unused in grammar

    ERROR


State 11 conflicts: 2 shift/reduce
State 17 conflicts: 2 shift/reduce
State 129 conflicts: 9 shift/reduce
State 140 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | error ';'

    7 feature_list: %empty
    8             | feature ';'
    9             | feature_list feature ';'

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}'
   11        | OBJECTID ':' TYPEID
   12        | OBJECTID ':' TYPEID ASSIGN expr
   13        | error

   14 formal_list: %empty
   15            | formal
   16            | formal_list ',' formal

   17 formal: OBJECTID ':' TYPEID

   18 expr: OBJECTID ASSIGN expr
   19     | expr '@' TYPEID '.' OBJECTID '(' expr_list_comma ')'
   20     | expr '.' OBJECTID '(' expr_list_comma ')'
   21     | OBJECTID '(' expr_list_comma ')'
   22     | IF expr THEN expr ELSE expr FI
   23     | WHILE expr LOOP expr POOL
   24     | '{' expr_list_semicolon '}'
   25     | LET let_body
   26     | CASE expr OF case_list ESAC
   27     | NEW TYPEID
   28     | ISVOID expr
   29     | expr '+' expr
   30     | expr '-' expr
   31     | expr '*' expr
   32     | expr '/' expr
   33     | '~' expr
   34     | expr '<' expr
   35     | expr LE expr
   36     | expr '=' expr
   37     | NOT expr
   38     | '(' expr ')'
   39     | OBJECTID
   40     | INT_CONST
   41     | STR_CONST
   42     | BOOL_CONST

   43 expr_list_comma: %empty
   44                | expr
   45                | expr_list_comma ',' expr

   46 expr_list_semicolon: expr ';'
   47                    | expr_list_semicolon expr ';'
   48                    | error ';'

   49 case_: OBJECTID ':' TYPEID DARROW expr ';'

   50 case_list: case_
   51          | case_list case_

   52 let_body: OBJECTID ':' TYPEID ASSIGN expr IN expr
   53         | OBJECTID ':' TYPEID IN expr
   54         | OBJECTID ':' TYPEID ASSIGN expr ',' let_body
   55         | OBJECTID ':' TYPEID ',' let_body
   56         | error ',' let_body


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 10 19 20 21 38
    ')' (41) 10 19 20 21 38
    '*' (42) 31
    '+' (43) 29
    ',' (44) 16 45 54 55 56
    '-' (45) 30
    '.' (46) 19 20
    '/' (47) 32
    ':' (58) 10 11 12 17 49 52 53 54 55
    ';' (59) 4 5 6 8 9 46 47 48 49
    '<' (60) 34
    '=' (61) 36
    '@' (64) 19
    '{' (123) 4 5 10 24
    '}' (125) 4 5 10 24
    '~' (126) 33
    error (256) 6 13 48 56
    CLASS (258) 4 5
    ELSE (259) 22
    FI (260) 22
    IF (261) 22
    IN (262) 52 53
    INHERITS (263) 5
    LET (264) 25
    LOOP (265) 23
    POOL (266) 23
    THEN (267) 22
    WHILE (268) 23
    CASE (269) 26
    ESAC (270) 26
    OF (271) 26
    DARROW (272) 49
    NEW (273) 27
    ISVOID (274) 28
    STR_CONST <symbol> (275) 41
    INT_CONST <symbol> (276) 40
    BOOL_CONST <boolean> (277) 42
    TYPEID <symbol> (278) 4 5 10 11 12 17 19 27 49 52 53 54 55
    OBJECTID <symbol> (279) 10 11 12 17 18 19 20 21 39 49 52 53 54 55
    ASSIGN (280) 12 18 52 54
    NOT (281) 37
    LE (282) 35
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3
        on right: 1 3
    class <class_> (48)
        on left: 4 5 6
        on right: 2 3
    feature_list <features> (49)
        on left: 7 8 9
        on right: 4 5 9
    feature <feature> (50)
        on left: 10 11 12 13
        on right: 8 9
    formal_list <formals> (51)
        on left: 14 15 16
        on right: 10 16
    formal <formal> (52)
        on left: 17
        on right: 15 16
    expr <expression> (53)
        on left: 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42
        on right: 10 12 18 19 20 22 23 26 28 29 30 31 32 33 34 35 36 37 38 44 45 46 47 49 52 53 54
    expr_list_comma <expressions> (54)
        on left: 43 44 45
        on right: 19 20 21 45
    expr_list_semicolon <expressions> (55)
        on left: 46 47 48
        on right: 24 47
    case_ <case_> (56)
        on left: 49
        on right: 50 51
    case_list <cases> (57)
        on left: 50 51
        on right: 26 51
    let_body <expression> (58)
        on left: 52 53 54 55 56
        on right: 25 54 55 56


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    6 class: error . ';'

    ';'  shift, and go to state 6


State 2

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 9


State 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 6

    6 class: error ';' .

    $default  reduce using rule 6 (class)


State 7

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 8

    0 $accept: program $end .

    $default  accept


State 9

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 12


State 11

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    error     [reduce using rule 7 (feature_list)]
    OBJECTID  [reduce using rule 7 (feature_list)]
    '}'       reduce using rule 7 (feature_list)

    feature_list  go to state 15
    feature       go to state 16


State 12

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 17


State 13

   13 feature: error .

    $default  reduce using rule 13 (feature)


State 14

   10 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}'
   11        | OBJECTID . ':' TYPEID
   12        | OBJECTID . ':' TYPEID ASSIGN expr

    '('  shift, and go to state 18
    ':'  shift, and go to state 19


State 15

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
    9 feature_list: feature_list . feature ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 20

    feature  go to state 21


State 16

    8 feature_list: feature . ';'

    ';'  shift, and go to state 22


State 17

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    error     [reduce using rule 7 (feature_list)]
    OBJECTID  [reduce using rule 7 (feature_list)]
    '}'       reduce using rule 7 (feature_list)

    feature_list  go to state 23
    feature       go to state 16


State 18

   10 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}'

    OBJECTID  shift, and go to state 24

    $default  reduce using rule 14 (formal_list)

    formal_list  go to state 25
    formal       go to state 26


State 19

   11 feature: OBJECTID ':' . TYPEID
   12        | OBJECTID ':' . TYPEID ASSIGN expr

    TYPEID  shift, and go to state 27


State 20

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 28


State 21

    9 feature_list: feature_list feature . ';'

    ';'  shift, and go to state 29


State 22

    8 feature_list: feature ';' .

    $default  reduce using rule 8 (feature_list)


State 23

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    9 feature_list: feature_list . feature ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 30

    feature  go to state 21


State 24

   17 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 31


State 25

   10 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}'
   16 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 32
    ','  shift, and go to state 33


State 26

   15 formal_list: formal .

    $default  reduce using rule 15 (formal_list)


State 27

   11 feature: OBJECTID ':' TYPEID .
   12        | OBJECTID ':' TYPEID . ASSIGN expr

    ASSIGN  shift, and go to state 34

    $default  reduce using rule 11 (feature)


State 28

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 29

    9 feature_list: feature_list feature ';' .

    $default  reduce using rule 9 (feature_list)


State 30

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 35


State 31

   17 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 36


State 32

   10 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 37


State 33

   16 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 24

    formal  go to state 38


State 34

   12 feature: OBJECTID ':' TYPEID ASSIGN . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 53


State 35

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 36

   17 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 17 (formal)


State 37

   10 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 54


State 38

   16 formal_list: formal_list ',' formal .

    $default  reduce using rule 16 (formal_list)


State 39

   22 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 55


State 40

   25 expr: LET . let_body

    error     shift, and go to state 56
    OBJECTID  shift, and go to state 57

    let_body  go to state 58


State 41

   23 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 59


State 42

   26 expr: CASE . expr OF case_list ESAC

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 60


State 43

   27 expr: NEW . TYPEID

    TYPEID  shift, and go to state 61


State 44

   28 expr: ISVOID . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 62


State 45

   41 expr: STR_CONST .

    $default  reduce using rule 41 (expr)


State 46

   40 expr: INT_CONST .

    $default  reduce using rule 40 (expr)


State 47

   42 expr: BOOL_CONST .

    $default  reduce using rule 42 (expr)


State 48

   18 expr: OBJECTID . ASSIGN expr
   21     | OBJECTID . '(' expr_list_comma ')'
   39     | OBJECTID .

    ASSIGN  shift, and go to state 63
    '('     shift, and go to state 64

    $default  reduce using rule 39 (expr)


State 49

   37 expr: NOT . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 65


State 50

   33 expr: '~' . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 66


State 51

   24 expr: '{' . expr_list_semicolon '}'

    error       shift, and go to state 67
    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr                 go to state 68
    expr_list_semicolon  go to state 69


State 52

   38 expr: '(' . expr ')'

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 70


State 53

   12 feature: OBJECTID ':' TYPEID ASSIGN expr .
   19 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list_comma ')'
   20     | expr . '.' OBJECTID '(' expr_list_comma ')'
   29     | expr . '+' expr
   30     | expr . '-' expr
   31     | expr . '*' expr
   32     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . LE expr
   36     | expr . '=' expr

    LE   shift, and go to state 71
    '<'  shift, and go to state 72
    '='  shift, and go to state 73
    '+'  shift, and go to state 74
    '-'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '@'  shift, and go to state 78
    '.'  shift, and go to state 79

    $default  reduce using rule 12 (feature)


State 54

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expr '}'

    '{'  shift, and go to state 80


State 55

   19 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list_comma ')'
   20     | expr . '.' OBJECTID '(' expr_list_comma ')'
   22     | IF expr . THEN expr ELSE expr FI
   29     | expr . '+' expr
   30     | expr . '-' expr
   31     | expr . '*' expr
   32     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . LE expr
   36     | expr . '=' expr

    THEN  shift, and go to state 81
    LE    shift, and go to state 71
    '<'   shift, and go to state 72
    '='   shift, and go to state 73
    '+'   shift, and go to state 74
    '-'   shift, and go to state 75
    '*'   shift, and go to state 76
    '/'   shift, and go to state 77
    '@'   shift, and go to state 78
    '.'   shift, and go to state 79


State 56

   56 let_body: error . ',' let_body

    ','  shift, and go to state 82


State 57

   52 let_body: OBJECTID . ':' TYPEID ASSIGN expr IN expr
   53         | OBJECTID . ':' TYPEID IN expr
   54         | OBJECTID . ':' TYPEID ASSIGN expr ',' let_body
   55         | OBJECTID . ':' TYPEID ',' let_body

    ':'  shift, and go to state 83


State 58

   25 expr: LET let_body .

    $default  reduce using rule 25 (expr)


State 59

   19 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list_comma ')'
   20     | expr . '.' OBJECTID '(' expr_list_comma ')'
   23     | WHILE expr . LOOP expr POOL
   29     | expr . '+' expr
   30     | expr . '-' expr
   31     | expr . '*' expr
   32     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . LE expr
   36     | expr . '=' expr

    LOOP  shift, and go to state 84
    LE    shift, and go to state 71
    '<'   shift, and go to state 72
    '='   shift, and go to state 73
    '+'   shift, and go to state 74
    '-'   shift, and go to state 75
    '*'   shift, and go to state 76
    '/'   shift, and go to state 77
    '@'   shift, and go to state 78
    '.'   shift, and go to state 79


State 60

   19 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list_comma ')'
   20     | expr . '.' OBJECTID '(' expr_list_comma ')'
   26     | CASE expr . OF case_list ESAC
   29     | expr . '+' expr
   30     | expr . '-' expr
   31     | expr . '*' expr
   32     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . LE expr
   36     | expr . '=' expr

    OF   shift, and go to state 85
    LE   shift, and go to state 71
    '<'  shift, and go to state 72
    '='  shift, and go to state 73
    '+'  shift, and go to state 74
    '-'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '@'  shift, and go to state 78
    '.'  shift, and go to state 79


State 61

   27 expr: NEW TYPEID .

    $default  reduce using rule 27 (expr)


State 62

   19 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list_comma ')'
   20     | expr . '.' OBJECTID '(' expr_list_comma ')'
   28     | ISVOID expr .
   29     | expr . '+' expr
   30     | expr . '-' expr
   31     | expr . '*' expr
   32     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . LE expr
   36     | expr . '=' expr

    '@'  shift, and go to state 78
    '.'  shift, and go to state 79

    $default  reduce using rule 28 (expr)


State 63

   18 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 86


State 64

   21 expr: OBJECTID '(' . expr_list_comma ')'

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    $default  reduce using rule 43 (expr_list_comma)

    expr             go to state 87
    expr_list_comma  go to state 88


State 65

   19 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list_comma ')'
   20     | expr . '.' OBJECTID '(' expr_list_comma ')'
   29     | expr . '+' expr
   30     | expr . '-' expr
   31     | expr . '*' expr
   32     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . LE expr
   36     | expr . '=' expr
   37     | NOT expr .

    LE   shift, and go to state 71
    '<'  shift, and go to state 72
    '='  shift, and go to state 73
    '+'  shift, and go to state 74
    '-'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '@'  shift, and go to state 78
    '.'  shift, and go to state 79

    $default  reduce using rule 37 (expr)


State 66

   19 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list_comma ')'
   20     | expr . '.' OBJECTID '(' expr_list_comma ')'
   29     | expr . '+' expr
   30     | expr . '-' expr
   31     | expr . '*' expr
   32     | expr . '/' expr
   33     | '~' expr .
   34     | expr . '<' expr
   35     | expr . LE expr
   36     | expr . '=' expr

    '@'  shift, and go to state 78
    '.'  shift, and go to state 79

    $default  reduce using rule 33 (expr)


State 67

   48 expr_list_semicolon: error . ';'

    ';'  shift, and go to state 89


State 68

   19 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list_comma ')'
   20     | expr . '.' OBJECTID '(' expr_list_comma ')'
   29     | expr . '+' expr
   30     | expr . '-' expr
   31     | expr . '*' expr
   32     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . LE expr
   36     | expr . '=' expr
   46 expr_list_semicolon: expr . ';'

    LE   shift, and go to state 71
    '<'  shift, and go to state 72
    '='  shift, and go to state 73
    '+'  shift, and go to state 74
    '-'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '@'  shift, and go to state 78
    '.'  shift, and go to state 79
    ';'  shift, and go to state 90


State 69

   24 expr: '{' expr_list_semicolon . '}'
   47 expr_list_semicolon: expr_list_semicolon . expr ';'

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '}'         shift, and go to state 91
    '('         shift, and go to state 52

    expr  go to state 92


State 70

   19 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list_comma ')'
   20     | expr . '.' OBJECTID '(' expr_list_comma ')'
   29     | expr . '+' expr
   30     | expr . '-' expr
   31     | expr . '*' expr
   32     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . LE expr
   36     | expr . '=' expr
   38     | '(' expr . ')'
